--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,11 +14,11 @@
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 		<hr>
 
-		<div class="board">
+		<div class="board" id="game-board">
+			<!-- <div class="card"></div>
 			<div class="card"></div>
 			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
+			<div class="card"></div> -->
 		</div>
 		<footer>
 			<p>Created with <span style="color:red">&hearts;</span> by <span style="color:red">GA</span></p>
